# OKRPZ_GymReservation

./: .gitignore  .pylintrc  Dockerfile  README.dev.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
nginx/: Dockerfile  nginx.conf
src/: .pytest.ini  manage.py
src/api/: serializers.py  urls.py  views.py
src/booking/: admin.py  apps.py  forms.py  mixins.py  models.py  signals.py  urls.py
src/booking/migrations/: 0001_initial.py  0002_initial.py  (+2 more)
src/booking/tests/: test_urls.py  (+4 more)
src/core/: asgi.py  celery.py  redis.py  urls.py  wsgi.py
src/main/: admin.py  apps.py  context_processors.py  middlewares.py  services.py  signals.py  tasks.py  urls.py  views.py
src/users/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
static/css/: base.css  create_reservation.css  create_work_schedule.css  index.css  prism.css  trainer_detail.css
static/js/: base.js  prism.js
templates/: 404.html  500.html  _footer.html  _header.html  _modal_image_preview.html  _notifications.html  _paginator.html  base.html  base_unstyled.html
templates/admin/: base.html  base_site.html  color_theme_toggle.html
templates/booking/: create_reservation.html  create_work_shedule.html  trainer_detail.html  trainers_list.html
templates/main/: about.html  host_info.html  index.html  test_functions.html
templates/users/: client_profile.html  client_profile_change.html  login.html  password_reset.html  password_reset_confirm.html  profile.html  register.html  reset_wait.html  trainer_profile_change.html  user_detail.html
(+22 files in other folders)
